<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    tools:context=".MainActivity">

        <RelativeLayout
            android:id="@+id/Header"
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textSize="80sp">
            </TextView>
        </RelativeLayout>

        <EditText
            android:id="@+id/idEditUserName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/Header"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:hint="@string/enter_username"
            android:importantForAutofill="no"
            android:inputType="text"/>

        <!--EditText for adding user First name-->
        <EditText
            android:id="@+id/idEditFirstName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/idEditUserName"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:hint="@string/enter_first_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <!--EditText for adding user Last name-->
        <EditText
            android:id="@+id/idEditLastName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/idEditFirstName"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:hint="@string/enter_last_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <!--EditText for adding user weight-->
        <EditText
            android:id="@+id/idEditWeight"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/idEditLastName"
            android:layout_margin="10dp"
            android:hint="@string/enter_your_weight"
            android:inputType="number"
            android:maxLength="3"
            android:importantForAutofill="no"/>

        <!--EditText for adding user zip-->
        <EditText
            android:id="@+id/idEditZipCode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/idEditWeight"
            android:layout_margin="10dp"
            android:hint="@string/enter_your_zip_code"
            android:maxLength="5"
            android:inputType="number" />

        <!--Button for adding data to Firebase-->
        <Button
            android:id="@+id/idBtnSendData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idEditZipCode"
            android:layout_margin="10dp"
            android:text="@string/login_add_user"
            android:textAllCaps="true" />

</RelativeLayout>